--- a/configserver/src/main/resources/application.properties
+++ b/configserver/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=configserver
 server.port=8888
 
 spring.cloud.config.server.git.uri=file:///C:/Users/jokumar/Documents/POCWorkspace/git-msconfig-repo
-spring.cloud.config.server.git.username=joydipkumar@gmail.com
-spring.cloud.config.server.git.password=Password2017
+spring.cloud.config.server.git.username=
+spring.cloud.config.server.git.password=
